--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,15 @@
 .App > div {
   margin-right: 50px;
 }
+
+.is-done {
+  opacity: 0.5;
+}
+
+.active-filter {
+  background-color: aquamarine;
+}
+
+.error {
+  border: 2px solid red;
+}
